# Crippel-Trader

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .vercelignore  AI_RULES.md  DEVELOPMENT.md  Makefile  README.md  Start trading.bat  StartBot.bat  UpdateLocalFolder.bat  auto_push.bat  auto_push.py  build-prod.bat  build-prod.sh  config.json  index.html  jest.config.js  main.js  next.config.js  package-lock.json  package.json  pull_from_github.bat  push_now.bat  push_to_github.bat  pyproject.toml  real_trading_dashboard.py  requirements.txt  run_dashboard.bat  server.js  settings.json  simple_dashboard.py  start-croc-bot.bat  start-dev.bat  start-dev.sh  start-prod.bat  start-prod.sh  startTrading.bat  start_croc_bot.py  (+9 more)
.emergent/: emergent.yml
ai_agent/: __init__.py  code_refactor.py
ai_assistant/: assistant.py
analysis/: DEPENDENCY_GRAPH.dot  HEATMAP.json  INDEX.csv  REPO_MAP.md
app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
backend/: encore.app  main.py  requirements.txt  server.js
bot/: __init__.py  config_loader.py  server.py  state.py  trading_engine.py
config/: config.json
core/: __init__.py  bot.py  feed.py  risk.py  simulation.py  strategy.py
crippel-firm/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.bat
crippel-firm/backend/: __init__.py  app.py  logging.py  main.py  routes.py  settings.py  ws.py
crippel-firm/backend/bots/: __init__.py  analyst_bot.py  base.py  research_bot.py  risk_bot.py  trader_bot.py
crippel-firm/backend/engine/: evaluation.py  execution.py  indicators.py  kraken_adapter.py  params.py  portfolio.py  simulator.py
crippel-firm/backend/firm/: __init__.py  brain.py  config.py  economy.py  eventbus.py  interfaces.py  manager.py  persistence.py  policies.py  registry.py  scoring.py
crippel-firm/backend/firm/api/: app.py  routes.py  ws.py
crippel-firm/backend/firm/bots/: analyst_bot.py  base.py  research_bot.py  risk_bot.py  trader_bot.py
crippel-firm/backend/firm/data/: indicators.py  insider_parser.py  sentiment_scraper.py
crippel-firm/backend/firm/engine/: evaluation.py  kraken_adapter.py  portfolio.py  simulator.py
crippel-firm/backend/firm/tests/: conftest.py  test_economy.py  test_manager.py  test_research.py  test_worker_bots.py
crippel-firm/backend/firm/utils/: logging.py  metrics.py
crippel-firm/frontend/: package.json
crippel-firm/frontend/src/components/: AggressionSlider.jsx  EquityChart.jsx  FirmKPI.jsx  LogPane.jsx  ModeToggle.jsx  WorkersTable.jsx
crippel-firm/frontend/src/lib/: api.js
crippel-firm/frontend/src/pages/: index.jsx
crippel-firm/frontend/src/styles/: globals.css
crippel-trader/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  make.ps1  pyproject.toml  requirements-localllm.txt  requirements.txt
crippel-trader/backend/: main.py
crippel-trader/backend/crippel/: ai_local.py  api.py  app.py  config.py  enhanced_runtime.py  enhanced_trading_system.py  logging.py  notifications.py  paper_trading.py  real_trading_engine.py  risk_manager.py  runtime.py  safety.py  strategy_manager.py  ws.py
crippel-trader/backend/crippel/adapters/: base.py  kraken.py  stocks_stub.py
crippel-trader/backend/crippel/ai/: __init__.py  assistant.py  client.py  decision_log.py  refactor_tool.py  research.py  schemas.py
crippel-trader/backend/crippel/engine/: clock.py  fills.py  market.py  params.py  portfolio.py  prediction.py  risk.py  simulator.py  strategy.py
crippel-trader/backend/crippel/engine/strategies/: macd_rsi.py
crippel-trader/backend/crippel/models/: core.py  enums.py  kraken_engine_schema.py  wire.py
crippel-trader/backend/crippel/persistence/: repo.py  schema.sql
crippel-trader/backend/crippel/services/: state.py  stats.py
crippel-trader/backend/crippel/strategies/: __init__.py  arbitrage.py  base.py  market_making.py  technical.py
crippel-trader/backend/crippel/tests/: test_ai.py  test_api.py  test_fills.py  test_params.py  test_portfolio.py  test_strategy.py
crippel-trader/frontend/: next.config.js  package.json
crippel-trader/frontend/src/components/: AggressionSlider.jsx  ConnectionIndicator.jsx  EquityChart.jsx  KPI.jsx  ModeToggle.jsx  OrderBlotter.jsx
crippel-trader/frontend/src/lib/: api.js
crippel-trader/frontend/src/pages/: index.jsx
crippel-trader/frontend/src/styles/: globals.css
crippel-trader/scripts/: setup.ps1  setup.sh  smoke.py
croc-bot/backend/: README.md  pyproject.toml
croc-bot/backend/config/: default.yml
croc-bot/backend/croc/: __init__.py  app.py  bus.py  config.py  logging_cfg.py
croc-bot/backend/croc/ai_engineer/: __init__.py  agent.py  analyzers.py  patcher.py  policies.py  sandbox.py  vcs.py
croc-bot/backend/croc/ai_engineer/prompts/: guardrails.md  optimize_prompt.txt  refactor_prompt.txt
croc-bot/backend/croc/data/: __init__.py  features.py  feed_base.py  feed_ccxt.py  feed_replay.py  feed_simulated.py
croc-bot/backend/croc/exec/: __init__.py  broker_base.py  broker_ccxt.py  broker_paper.py
croc-bot/backend/croc/models/: __init__.py  types.py
croc-bot/backend/croc/risk/: __init__.py  risk_manager.py
croc-bot/backend/croc/rl/: __init__.py  dataset.py  env.py  evaluate.py  gates.py  promote.py  rewards.py  schedule.py  train.py
croc-bot/backend/croc/runtime/: __init__.py  engine.py  metrics.py  scheduler.py  simulation.py
croc-bot/backend/croc/storage/: __init__.py  datastore.py  model_registry.py
croc-bot/backend/croc/strategy/: __init__.py  base.py  ml_policy.py  rule_sma.py
croc-bot/backend/scripts/: backtest.sh  dev_run.sh  train_rl.sh
croc-bot/backend/tests/: test_env.py  test_features.py  test_gates.py  test_registry.py  test_risk.py  test_shadow.py  test_simulation_mode.py
croc_bot/: __init__.py  domain.py
data/: __init__.py  experience.py  ingestion.py  performance.py  preprocessing.py
docs/: ARCHITECTURE.md
executors/: __init__.py  async_executor.py
frontend/: App.tsx  client.ts  (+2 more)
(+160 files in other folders)
