[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croc-bot"
version = "0.1.0"
description = "Clean, minimal, and extensible trading bot simulation"
readme = "README.md"
authors = [{ name = "CrocBot Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
