[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croc-bot"
version = "0.1.0"
description = "Clean, minimal, and extensible trading bot simulation"
readme = "README.md"
authors = [{ name = "CrocBot Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.4",
    "prometheus-client>=0.17",
    "structlog>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]
ml = [
    "scikit-learn>=1.3",
    "torch>=2.1; platform_system != 'Windows'",
]
rl = [
    "stable-baselines3>=2.0",
    "ray[rllib]>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
