[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crippel-firm"
version = "0.1.0"
description = "Autonomous trading organization simulation"
authors = [{name = "Crippel-Firm"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.22",
    "pydantic>=2.5",
    "sqlmodel>=0.0.14",
    "orjson>=3.9",
    "numpy>=1.25",
    "pandas>=2.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[tool.setuptools.packages.find]
where = ["backend"]
