[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crippel-trader"
version = "0.1.0"
description = "Deterministic crypto trading engine with paper and live modes"
readme = "README.md"
authors = [{ name = "Aaron" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "orjson>=3.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "aiosqlite>=0.19",
  "numpy>=1.26",
  "pytz>=2024.1",
  "structlog>=24.1",
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.33",
  "pandas>=2.2",
  "plotly>=5.20",
  "requests>=2.31",
]
unix = [
  "uvloop>=0.19",
  "watchfiles>=0.21",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.2",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "Q", "UP", "ASYNC", "S", "N"]
ignore = ["S101", "S311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
